--- a/style.css
+++ b/style.css
@@ -45,8 +45,10 @@ nav ul li a {
   color: #333;
 }
 .content h1 {
-  font-size: 60px;
-  font-weight: 100;
+   font-size: 60px;
+   font-weight: 100;
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
   margin-top: 24px;
   margin-bottom: 15px;
   color: #232d60;
